Update .env with production configuration comments
Add comments for production environment configuration.

--- a/.env
+++ b/.env
@@ -11,6 +11,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/stage?serverVersion=10.11.2-MariaDB&c
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
+# En production (Render) - Symfony utilisera automatiquement PostgreSQL
+# via la variable d'environnement DATABASE_URL de Render
+###< doctrine/doctrine-bundle ###
+
 ###> symfony/mailer ###
 # Utilisez des variables d'environnement pour les secrets
 MAILER_DSN=gmail://${GMAIL_USERNAME}:${GMAIL_APP_PASSWORD}@default
